# swagger/swagger.yml
@@ -11,248 +11,130 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
-  /object/:
+  /t_user/:
     get:
       tags:
-      - object
-      description: get all objects
-      operationId: ObjectController.GetAll
+      - t_user
+      description: get TUser
+      operationId: TUserController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
       responses:
         "200":
           schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
+            $ref: '#/definitions/models.TUser'
+        "403": {}
     post:
       tags:
-      - object
-      description: create object
-      operationId: ObjectController.Create
+      - t_user
+      description: create TUser
+      operationId: TUserController.Post
       parameters:
       - in: body
         name: body
-        description: The object content
+        description: body for TUser content
         required: true
         schema:
-          $ref: '#/definitions/models.Object'
+          $ref: '#/definitions/models.TUser'
       responses:
-        "200":
-          description: '{string} models.Object.Id'
+        "201":
+          description: '{int} models.TUser'
         "403":
           description: body is empty
-  /object/{objectId}:
+  /t_user/{id}:
     get:
       tags:
-      - object
-      description: find object by objectid
-      operationId: ObjectController.Get
+      - t_user
+      description: get TUser by id
+      operationId: TUserController.Get One
       parameters:
       - in: path
-        name: objectId
-        description: the objectid you want to get
-        required: true
-        type: string
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    put:
-      tags:
-      - object
-      description: update the object
-      operationId: ObjectController.Update
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectid you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: The body
-        required: true
-        schema:
-          $ref: '#/definitions/models.Object'
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.Object'
-        "403":
-          description: :objectId is empty
-    delete:
-      tags:
-      - object
-      description: delete the object
-      operationId: ObjectController.Delete
-      parameters:
-      - in: path
-        name: objectId
-        description: The objectId you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: objectId is empty
-  /user/:
-    get:
-      tags:
-      - user
-      description: get all Users
-      operationId: UserController.GetAll
-      responses:
-        "200":
-          schema:
-            $ref: '#/definitions/models.User'
-    post:
-      tags:
-      - user
-      description: create users
-      operationId: UserController.CreateUser
-      parameters:
-      - in: body
-        name: body
-        description: body for user content
-        required: true
-        schema:
-          $ref: '#/definitions/models.User'
-      responses:
-        "200":
-          description: '{int} models.User.Id'
-        "403":
-          description: body is empty
-  /user/{uid}:
-    get:
-      tags:
-      - user
-      description: get user by uid
-      operationId: UserController.Get
-      parameters:
-      - in: path
-        name: uid
+        name: id
         description: The key for staticblock
         required: true
         type: string
       responses:
         "200":
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.TUser'
         "403":
-          description: :uid is empty
+          description: :id is empty
     put:
       tags:
-      - user
-      description: update the user
-      operationId: UserController.Update
+      - t_user
+      description: update the TUser
+      operationId: TUserController.Put
       parameters:
       - in: path
-        name: uid
-        description: The uid you want to update
+        name: id
+        description: The id you want to update
         required: true
         type: string
       - in: body
         name: body
-        description: body for user content
+        description: body for TUser content
         required: true
         schema:
-          $ref: '#/definitions/models.User'
+          $ref: '#/definitions/models.TUser'
       responses:
         "200":
           schema:
-            $ref: '#/definitions/models.User'
+            $ref: '#/definitions/models.TUser'
         "403":
-          description: :uid is not int
+          description: :id is not int
     delete:
       tags:
-      - user
-      description: delete the user
-      operationId: UserController.Delete
+      - t_user
+      description: delete the TUser
+      operationId: TUserController.Delete
       parameters:
       - in: path
-        name: uid
-        description: The uid you want to delete
+        name: id
+        description: The id you want to delete
         required: true
         type: string
       responses:
         "200":
           description: '{string} delete success!'
         "403":
-          description: uid is empty
-  /user/login:
-    get:
-      tags:
-      - user
-      description: Logs user into the system
-      operationId: UserController.Login
-      parameters:
-      - in: query
-        name: username
-        description: The username for login
-        required: true
-        type: string
-      - in: query
-        name: password
-        description: The password for login
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} login success'
-        "403":
-          description: user not exist
-  /user/logout:
-    get:
-      tags:
-      - user
-      description: Logs out current logged in user session
-      operationId: UserController.logout
-      responses:
-        "200":
-          description: '{string} logout success'
+          description: id is empty
 definitions:
-  models.Object:
-    title: Object
-    type: object
-    properties:
-      ObjectId:
-        type: string
-      PlayerName:
-        type: string
-      Score:
-        type: integer
-        format: int64
-  models.Profile:
-    title: Profile
-    type: object
-    properties:
-      Address:
-        type: string
-      Age:
-        type: integer
-        format: int64
-      Email:
-        type: string
-      Gender:
-        type: string
-  models.User:
-    title: User
+  models.TUser:
+    title: TUser
     type: object
     properties:
       Id:
-        type: string
+        type: integer
+        format: int64
       Password:
         type: string
-      Profile:
-        $ref: '#/definitions/models.Profile'
-      Username:
+      UserName:
         type: string
 tags:
-- name: object
+- name: t_user
   description: |
-    Operations about object
-- name: user
-  description: |
-    Operations about Users
+    TUserController operations for TUser
